--- a/docs/style_telechargement.css
+++ b/docs/style_telechargement.css
@@ -37,7 +37,7 @@
     header {
       background: #217BB7;
       color: white;
-      padding: 2rem;
+      padding: 1rem 2rem;
       border-radius: 8px;
       margin-bottom: 2rem;
       text-align: center;
