Correction de l'espacement du padding et ajustement des marges dans les en-têtes des fichiers style_telechargement.css et styles.css

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -19,11 +19,22 @@
         header {
             background: linear-gradient(135deg, var(--primary), var(--secondary));
             color: white;
-            padding: 1rem 2rem;
+            padding: 0.5rem 2rem;
             border-radius: 8px;
             margin-bottom: 2rem;
             text-align: center;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+        
+        header img {
+            height: 150px;
+            margin-top: 0;
+            margin-bottom:0;
+        }
+
+        header p {
+            margin-top: 0;
+            margin-bottom:0,5rem;
         }
         
         h1 {
