--- a/docs/style_telechargement.css
+++ b/docs/style_telechargement.css
@@ -2,7 +2,7 @@
       font-family: Arial, sans-serif;
       line-height: 1.6;
       max-width: 850px;
-      margin: 0px auto;
+      margin: 0 auto;
       padding: 20px;
       background: #f9f9f9;
       color: #333;
