--- a/docs/styles.css
+++ b/docs/styles.css
@@ -36,7 +36,13 @@
             margin-top: 0;
             margin-bottom:0,5rem;
         }
-        
+
+        footer {
+            margin-top: 40px;
+            font-size: 0.9em;
+            color: #666;
+            text-align: center;
+        }
         h1 {
             margin: 0;
             font-size: 2.5rem;
